--- a/data/rules.yml
+++ b/data/rules.yml
@@ -6,16 +6,18 @@ rules:
   steps:
   - intent: greet
   - action: utter_greet
- 
-  # - action: mood_good
-  # - intent: utter_happy
 
-# - rule: Say goodbye anytime the user says goodbye
-#   steps:
-#   - intent: goodbye
-#   - action: utter_goodbye
+- rule: Always say utter_happy after user expresses mood_good
+  steps:
+  - intent: mood_good
+  - action: utter_happy
 
-# - rule: Say 'I am a bot' anytime the user challenges
-#   steps:
-#   - intent: bot_challenge
-#   - action: utter_iamabot
+- rule: Say goodbye anytime the user says goodbye
+  steps:
+  - intent: goodbye
+  - action: utter_goodbye
+
+- rule: Say 'I am a bot' anytime the user challenges
+  steps:
+  - intent: bot_challenge
+  - action: utter_iamabot
