Intent: some changes

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -3,6 +3,7 @@ version: "3.1"
 nlu:
 - intent: greet
   examples: |
+    - আাসসালামুআালাইকুম
     - হাই
     - হ্যালো
     - ওহে
@@ -16,6 +17,7 @@ nlu:
 
 - intent: mood_good
   examples: |
+    - আলহামদুলিল্লাহ  
     - আমি ভালো আছি
     - অনেক অনেক ভালো
     - ভালো
@@ -39,13 +41,12 @@ nlu:
     - ভালো থেকো
     - ভালো থাকেন
     - শুভ রাত্রি
-    - সুন্দর দিন কাটাও
     - আবার দেখা হবে
     - পরে দেখা হবে
     - দেখা হবে
     - থাক যাই
     - থাকেন যাই
-    - আল্লাহ হাফেজ
+    - আল্লাহ্ হাফেজ
 
 - intent: affirm
   examples: |
@@ -55,6 +56,11 @@ nlu:
     - মানলাম
     - সঠিক
     - সত্য
+    - আচ্ছা
+    - ঠিক আছে
+    - অবশ্যই
+    - কেন নয়
+    - কেনো নয়
 
 - intent: deny
   examples: |
