Added present time custom_action to tell me users time.now

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -114,3 +114,9 @@ nlu:
     - আমি কি বটের সাথে কথা বলছি?
     - আমি কার সাথে কথা বলছি?
     - আমি কি মানুষের সাথে কথা বলছি?
+
+- intent: show_time
+  examples: |
+    - সময়
+    - এখন সময় কত?
+    - সময়টা জানতে পারি কি?
