--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -7,7 +7,6 @@ nlu:
     - হাই
     - হ্যালো
     - ওহে
-    - ও
     - কই
     - চল যাই
     - চলেন যাই
@@ -18,22 +17,44 @@ nlu:
 - intent: mood_good
   examples: |
     - আলহামদুলিল্লাহ  
-    - আমি ভালো আছি
-    - অনেক অনেক ভালো
-    - ভালো
     - সুন্দর
-    - খুব ভালো
-    - নিখুঁত
-    - রাজার মতো মনে হচ্ছে
-    - অনেক ভালো আছি
-    - অনেক ভালো অনুভব করছি
+    - ভালো
+    - খুব ভালো    
     - খুব ভালো আছি
     - খুবই ভালো আছি
+    - আমি ভালো আছি
+    - অনেক অনেক ভালো
+    - অনেক ভালো আছি
+    - অনেক ভালো অনুভব করছি
     - খুব ভালো অনুভব করছি
     - খুবই ভালো অনুভব করছি
+    - নিখুঁত
+    - রাজার মতো মনে হচ্ছে
+    - মনে হচ্ছে আমিই পৃথিবীকে বাঁচাবো
     - পৃথিবীকে আমিই বাঁচাবো মনে হচ্ছে
     - শান্তি
     - শান্তিতে আছি
+
+- intent: ask_wellbeing
+  examples: |
+    - কেমন আছিস?
+    - কেমন আছিস রে?
+    - কেমন আছ?
+    - কেমন আছো?
+    - কেমন আছ রে?
+    - কেমন আছো রে?
+    - কেমন আছেন?
+    - ভালো আছিস?
+    - ভালো আছ?
+    - ভালো আছো?
+    - ভালো আছেন?
+    - তুই কেমন আছিস?
+    - তুই কেমন আছিস রে?
+    - তুমি কেমন আছো?
+    - তুমি কেমন আছ?
+    - তুমি কেমন আছো রে?
+    - তুমি কেমন আছ রে?
+    - আপনি কেমন আছেন?
 
 - intent: goodbye
   examples: |
@@ -50,8 +71,9 @@ nlu:
 
 - intent: affirm
   examples: |
-    - হ্যা
+    - হ
     - হা
+    - হ্যা
     - অবশ্যই
     - মানলাম
     - সঠিক
@@ -108,9 +130,19 @@ nlu:
   
 - intent: bot_challenge
   examples: |
+    - বট
+    - বট?
+    - মানুষ
+    - মানুষ?
     - তুমি কে?
+    - তুই কে?
+    - আপনি কে?
     - তুমি কি একটা বট?
+    - তুই কি একটা বট?
+    - আপনি কি একটা বট?
     - তুমি কি মানুষ?
+    - তুই কি মানুষ?
+    - আপনি কি মানুষ?
     - আমি কি বটের সাথে কথা বলছি?
     - আমি কার সাথে কথা বলছি?
     - আমি কি মানুষের সাথে কথা বলছি?
@@ -118,5 +150,104 @@ nlu:
 - intent: show_time
   examples: |
     - সময়
+    - সময় কত?
+    - সময়টা কত?
     - এখন সময় কত?
     - সময়টা জানতে পারি কি?
+
+- intent: show_features
+  examples: |
+    - ফিচার
+    - সাইটের ফিচার
+    - সাইট এর ফিচার
+    - সাইটের ফিচারগুলো
+    - সাইটের ফিচারসমূহ
+    - ফিচারগুলো
+    - ফিচারসমূহ
+    - ফিচারগুলো জানতে পারি কি?
+    - ফিচারসমূহ জানতে পারি কি?
+    - আমি ফিচারগুলো জানতে পারি?
+    - আমি ফিচারসমূহ জানতে পারি?
+    - আমি কি এই সাইটের ফিচারগুলো জানতে পারি?
+    - আমি কি এই সাইটের ফিচারসমূহ জানতে পারি?
+    - আমি কি এই সাইট এর ফিচারগুলো জানতে পারি?
+    - আমি কি এই সাইট এর ফিচারসমূহ জানতে পারি?
+    - এই সাইট এর ফিচারগুলো কি কি?
+    - এই সাইট এর ফিচারসমূহ কি কি?
+    - তুমি কি কি করতে পার?
+    - কি কি করতে পারেন?
+    - আপনি কি কি করতে পারেন?
+    - কি কি করতে পারেন?
+    - তুই কি কি করতে পারিস?
+    - কি কি করতে পারিস?
+
+- intent: ask_what_bot_doing_now
+  examples: |
+    - কি করিস?
+    - কি করতেছিস?
+    - কি কর?
+    - কি করতেছ?
+    - তুই কি করতেছিস?
+    - তুই কি করতেছিস রে?
+    - তুমি কি করতেছ?
+    - তুমি কি করতেছ রে?
+    - তুমি কি করতেছো?
+    - তুমি কি করতেছ‌ো রে?
+    - তোর কি করা হচ্ছে রে?
+    - তোর দ্বারা কি করা হচ্ছে রে?
+    - তোমার দ্বারা কি করা হচ্ছে রে?
+    - কি করেন?
+    - কি করতেছেন?
+    - কি করা হচ্ছে?
+    - কিছু কি করা হচ্ছে?
+    - আপনি কি করতেছেন?
+    - আপনার দ্বারা কি করা হচ্ছে?
+
+- intent: ask_bot_location
+  examples: |
+    - কই?
+    - কই
+    - কই তুই?
+    - কই আপনি?
+    - কই তুমি?
+    - কই আছিস?
+    - কই আছ?
+    - কই আছেন?
+    - কোথায়?
+    - কোথায়
+    - কোথায় আছিস
+    - কোথায় আছো?
+    - কোথায় আছেন?
+
+- intent: ask_rain_situation
+  examples: |
+    - বৃষ্টি
+    - বৃষ্টি?
+    - বৃষ্টি কি হবে?
+    - আজ কি বৃষ্টি হবে?
+    - বৃষ্টি হওয়ার সম্ভাবনা কি আছে?
+    - ছাতা
+    - ছাতা?
+    - ছাতা কি নিব?
+    - আমি কি ছাতা নিব?
+    - আমার কি ছাতা নেওয়া উচিত?
+    - ছাতা নেওয়া কি ঠিক হবে?
+    - ছাতা না নিলে কি সমস্যা হবে?
+
+- intent: meaningless_expressions
+  examples: |
+    - হম
+    - হুম
+    - হুমমম
+    - উহুম
+    - উহু
+    - আহ্
+    - আআহহ্
+    - আহা
+    - আহাহ্
+    - ওহ
+    - ওহ্x
+    - ওহো
+    - ওহহহহ
+    - ওওওহ
+    - ওওওহহ
