--- a/data/rules.yml
+++ b/data/rules.yml
@@ -12,12 +12,37 @@ rules:
   - intent: mood_good
   - action: utter_happy
 
-- rule: Say goodbye anytime the user says goodbye
-  steps:
-  - intent: goodbye
-  - action: utter_goodbye
-
 - rule: Say 'I am a bot' anytime the user challenges
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+
+- rule: Always reply when user asks wellbeing
+  steps:
+  - intent: ask_wellbeing
+  - action: utter_wellbeing
+
+- rule: Always show features when the user ask
+  steps:
+  - intent: show_features
+  - action: utter_features
+
+- rule: Always reply what the bot is doing when asked
+  steps:
+  - intent: ask_what_bot_doing_now
+  - action: utter_whatbotdoingnow
+
+- rule: Always ask a user to rephrase when they send a message with low nlu confidence
+  steps:
+  - intent: nlu_fallback
+  - action: utter_please_rephrase
+
+- rule: Always give rain status when the user asks
+  steps: 
+  - intent: ask_rain_situation
+  - action: action_rain_status
+
+- rule: Always give the location when the user asks
+  steps:
+  - intent: ask_bot_location
+  - action: utter_location
