--- a/domain.yml
+++ b/domain.yml
@@ -15,22 +15,41 @@ intents:
   - ask_bot_location
   - ask_rain_situation
   - meaningless_expressions
+  - provide_city_name
+  - get_weather_info
+  - air_quality
+  - reset_city_name
 
 entities:
   - city
+  - weather_info_type
 
-slot: 
+slots: 
   city:
     type: text
     influence_conversation: false
     mappings:
     - type: from_entity
       entity: city
+      conditions:
+          - active_loop: city_name_form
+  weather_info_type:
+    type: text
+    influence_conversation: false
+    mappings:
+    - type: from_entity
+      entity: weather_info_type
+
+forms:
+  city_name_form:
+    required_slots:
+      - city
 
 actions:
   - action_show_time
   - action_rain_status
   - action_weather_data
+  - action_air_quality
 
 responses:
   utter_greet:
@@ -78,6 +97,15 @@ responses:
 
   utter_location:
   - text: "কম্পিউটারের মেমরি আর লজিক বোর্ডের মধ্যে।"
+
+  utter_ask_city:
+  - text: "দয়া করে আপনার শহরটির নাম লিখুন: ‌\n১। খুলনা \n২। চট্টগ্রাম \n৩। ঢাকা \n৪। বরিশাল \n৫। রাজশাহী \n৬। রংপুর \n৭। ময়মনসিংহ \n৮। সিলেট"
+
+  utter_weather_info_type:
+  - text: "আবহাওয়ার বিকল্প পছন্দসমূহ: ১। আবহাওয়া ২। তাপমাত্রা ৩। আকাশের অবস্থা ৪। বৃষ্টিপাত ৫। বায়ুবেগ"
+
+  utter_city_name_changed:
+  - text: "আপনার শহরের নাম পরিবর্তন করা হয়েছে‌।"
 
 session_config:
   session_expiration_time: 60
