Small Changes: Small Changes has been made to fix some errors and keep the code clean: not important enough

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -3,20 +3,18 @@ version: "3.1"
 nlu:
 - intent: greet
   examples: |
-    - আাসসালামুআালাইকুম
     - হাই
     - হ্যালো
     - ওহে
-    - কই
     - চল যাই
     - চলেন যাই
     - শুভ সকাল
     - শুভ সন্ধ্যা
     - শুভ বিকাল
+    - আাসসালামুআালাইকুম
 
 - intent: mood_good
   examples: |
-    - আলহামদুলিল্লাহ  
     - সুন্দর
     - ভালো
     - খুব ভালো    
@@ -34,6 +32,7 @@ nlu:
     - পৃথিবীকে আমিই বাঁচাবো মনে হচ্ছে
     - শান্তি
     - শান্তিতে আছি
+    - আলহামদুলিল্লাহ  
 
 - intent: ask_wellbeing
   examples: |
@@ -59,12 +58,12 @@ nlu:
 - intent: goodbye
   examples: |
     - বিদায়
+    - শুভ রাত্রি
     - ভালো থেকো
     - ভালো থাকেন
-    - শুভ রাত্রি
-    - আবার দেখা হবে
-    - পরে দেখা হবে
     - দেখা হবে
+    - পরে দেখা হবে
+    - আবার দেখা হবে
     - থাক যাই
     - থাকেন যাই
     - আল্লাহ্ হাফেজ
@@ -74,6 +73,9 @@ nlu:
     - হ
     - হা
     - হ্যা
+    - হম
+    - হুম
+    - হুমমম
     - অবশ্যই
     - মানলাম
     - সঠিক
@@ -205,18 +207,18 @@ nlu:
 
 - intent: ask_bot_location
   examples: |
-    - কই?
     - কই
+    - কই?
     - কই তুই?
-    - কই আপনি?
     - কই তুমি?
-    - কই আছিস?
+    - কই আপনি?
     - কই আছ?
     - কই আছেন?
-    - কোথায়?
+    - কই আছিস?
     - কোথায়
-    - কোথায় আছিস
+    - কোথায়?
     - কোথায় আছো?
+    - কোথায় আছিস
     - কোথায় আছেন?
 
 - intent: ask_rain_situation
@@ -236,11 +238,8 @@ nlu:
 
 - intent: meaningless_expressions
   examples: |
-    - হম
-    - হুম
-    - হুমমম
-    - উহুম
     - উহু
+    - উহুম
     - আহ্
     - আআহহ্
     - আহা
@@ -254,36 +253,28 @@ nlu:
 
 - intent: get_weather_info
   examples: |
-    - ১। [আবহাওয়া](weather_info_type)
-    - ২। [তাপমাত্রা](weather_info_type)
-    - ৩। [আকাশের অবস্থা](weather_info_type)
-    - ৪। [বৃষ্টিপাত](weather_info_type)
-    - ৫। [বায়ুবেগ](weather_info_type)
+    - [আবহাওয়া](weather_info_type)
+    - [তাপমাত্রা](weather_info_type)
+    - [আকাশের অবস্থা](weather_info_type)
+    - [বৃষ্টিপাত](weather_info_type)
+    - [বায়ুবেগ](weather_info_type)
 
 - intent: provide_city_name
   examples: |
-    - ১। [খুলনা‌](city)
-    - ২। [চট্টগ্রাম](city)
-    - ৩। [ঢাকা](city)
-    - ৪। [বরিশাল](city)
-    - ৫। [রাজশাহী](city)
-    - ৬। [রংপুর](city)
-    - ৭। [ময়মনসিংহ](city)
-    - ৮। [সিলেট](city)
+    - [খুলনা‌](city)
+    - [চট্টগ্রাম](city)
+    - [ঢাকা](city)
+    - [বরিশাল](city)
+    - [রাজশাহী](city)
+    - [রংপুর](city)
+    - [ময়মনসিংহ](city)
+    - [সিলেট](city)
 
 - intent: air_quality
   examples: |
+    - AQI
+    - বায়ুর AQI
     - বায়ু দূষণের পরিমাণ
     - বায়ুর গুনগত মান
-    - বায়ুর AQI
-    - AQI
     - একিউআই
     - বায়ুর একিউআই
-
-# - intent: reset_city_name
-#   examples: |
-#     - শহরের নাম পরিবর্তন 
-#     - শহরের নাম কিভাবে পরিবর্তন করতে পারি?
-#     - শহরের নাম পরিবর্তন করতে চাই
-#     - শহরের নাম কিভাবে পরিবর্তন করা যেতে পারে?
-#     - অন্য শহরের [আবহাওয়া](weather_info_type) দেখতে চাই
